# doc-builder

./: .gitmodules  Cargo.toml  README.md  template.html  template_en.html  template_ru.html
0_docs_target/docs/user-guide/ru/part01_overview/: part01_overview.html
0_docs_target/docs/user-guide/ru/part02_operatingProcedure/: chapter01_hardware.html  chapter02_settingSetup.html  chapter03_installation.html  chapter04_check.html  part02_operatingProcedure.html
0_docs_target/docs/user-guide/ru/part03_mainScreen/: chapter01_generalInfo.html  chapter02_navigationPanel.html  chapter03_draftPicture.html  chapter04_stability.html  chapter05_strength.html  chapter06_weight.html  part03_mainScreen.html
0_docs_target/docs/user-guide/ru/part04_Info/: part03_shipInfo.html
0_docs_target/docs/user-guide/ru/part05_loading/: part05_loading.html
0_docs_target/docs/user-guide/ru/part06_draft/: part06_draft.html  section01_general.html  section02_drafts.html  section03_criteriaDraft.html
0_docs_target/docs/user-guide/ru/part07_strength/: part07_strength.html
0_docs_target/docs/user-guide/ru/part08_stability/: part08_stability.html  section01_leverFigure.html  (+3 more)
doc/assets/: template.html
doc/html/: doc.html  doc.md  report.html  report.md
doc/md/: report.md
src/: cache.rs  cli.rs  comrak_convert.rs  doc_dir.rs  main.rs
src/bench/: bench.rs
src/utils/: cli.rs  comrak_convert.rs  doc_dir.rs  eval.rs  html_embedd_svg.rs  html_fill_title_page.rs  html_mermaid_to_svg.rs  html_regex_replace.rs  html_replace_pagebreaks.rs  html_to_pdf.rs  html_use_template.rs  md_doc.rs  md_to_html.rs  mod.rs  title_page.rs  write_html.rs  write_md.rs
(+52 files in other folders)
