[package]
name = "md_to_pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
#
#
testing = { workspace = true }
debugging = { workspace = true }
#
# Collections
indexmap = "^2.7"
#
# Regex
regex = "^1.11"
#
# Md
markdown = "1.0.0-alpha.21"
comrak = "^0.32"
