[package]
name = "md_to_pdf"
version = "0.1.0"
edition = "2024"

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "md_to_pdf"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench/bench.rs"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
#
#
testing = { workspace = true }
debugging = { workspace = true }
#
# Collections
indexmap = "^2.7"
#
# Regex
regex = "^1.11"
#
# Markdown
markdown = "1.0.0-alpha.23"
comrak = "^0.36"
#
# Cli
clap = "^4.5"
#
# Images
image = "^0.25"
base64 = "^0.22"
#
# Mermaid
mermaid-rs = "^0.1"
#
# Html2Pdf
html2pdf = "^0.8"
headless_chrome = "^1.0"